# my-snake-game

./: snake-game.html
caritahub_alwayson/: README.md  pubspec.yaml
caritahub_alwayson/lib/: main.dart
caritahub_alwayson/linux/: CMakeLists.txt
caritahub_alwayson/test/: widget_test.dart
caritahub_alwayson/web/: index.html  manifest.json
caritahub_alwayson/windows/: CMakeLists.txt
livekit-escalation/: .dockerignore  .env  .env.example  CLAUDE.md  Dockerfile  Makefile  deploy.sh  pyproject.toml  schema.sql  setup_remote.sh
livekit-escalation/clients/: expired.html  kiosk.html  staff.html
livekit-escalation/kiosk-app/: README.md  pubspec.yaml
livekit-escalation/kiosk-app/android/app/: build.gradle.kts
livekit-escalation/kiosk-app/android/app/src/main/: AndroidManifest.xml
livekit-escalation/kiosk-app/android/app/src/main/kotlin/com/weeswares/caritahub/escalation_kiosk/: MainActivity.kt
livekit-escalation/kiosk-app/lib/: config.dart  main.dart  providers.dart  router.dart  theme.dart
livekit-escalation/kiosk-app/lib/screens/: call_screen.dart  home_screen.dart  waiting_screen.dart
livekit-escalation/livekit/: config.yaml
livekit-escalation/orchestrator/: clickhouse_logger.py  config.py  livekit_client.py  models.py  server.py  telegram_bot.py
livekit-escalation/services/: com.caritahub.escalation.plist  com.caritahub.livekit.plist  install_services.sh
mathquest-sg/: .gitignore  package-lock.json  package.json  prisma.config.ts
mathquest-sg/backend/: requirements.txt
mathquest-sg/dashboard/: index.html  package-lock.json  package.json  (+1 more)
(+213 files in other folders)
